--- a/Portfolio.html
+++ b/Portfolio.html
@@ -30,7 +30,7 @@
 					<div class="whome__text">Привет,
 											 я профессиональный
 											 <span class="whome__text-span">front-end разработчик,</span>
-											 Додик додик
+											 
 					</div>
 					<div class="whome__button">заказать верстку сайта</div>
 				</div>
@@ -193,7 +193,7 @@
 		</div>
 
 			<footer>
-				<p class="footer__p">Copyright © Ларин Вадим «Gentlemont :>» 2018 - 2020. Все авторские права защищены.
+				<p class="footer__p">Copyright © «Gentlemont :>» 2018 - 2020. Все авторские права защищены.
 					Копирование любых материалов сайта строго запрещено.</p>
 			</footer>
 
